# TranscribAIr

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  InstructionPrompt.txt  LICENSE  QUICKSTART.md  README.md  __version__.py  app.py  build.py  build.spec  install_ffmpeg.py  install_openpyxl.py  installer.iss  pyproject.toml  python313_fix.py  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh
.claude/: CLAUDE.md
.github/workflows/: release.yml
core/: __init__.py  audio_utils.py  excel_import.py  export.py  feedback.py  recorder.py  rubric.py  settings.py  transcriber.py
ui/: __init__.py  excel_preview_dialog.py  feedback_panel.py  main_window.py  mini_recorder.py  record_tab.py  rubric_dialog.py  settings_dialog.py  upload_tab.py
