[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribair"
dynamic = ["version"]
description = "AI-powered audio transcription and feedback organization tool"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Swansea University"}
]
keywords = [
    "transcription",
    "whisper",
    "ai",
    "feedback",
    "education",
    "audio",
    "speech-to-text",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "customtkinter>=5.2.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/TranscribAIr"
Documentation = "https://github.com/yourusername/TranscribAIr#readme"
Repository = "https://github.com/yourusername/TranscribAIr"
Issues = "https://github.com/yourusername/TranscribAIr/issues"
Changelog = "https://github.com/yourusername/TranscribAIr/blob/main/CHANGELOG.md"

[project.scripts]
transcribair = "app:main"

[project.gui-scripts]
transcribair-gui = "app:main"

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]
exclude = ["tests*", "build*", "dist*", "venv*", ".venv*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
